# racegate

./: .gitignore  Cargo.toml  README.md  cfg.toml.example  sdkconfig.defaults
.cargo/: config.toml
racegate/: Cargo.toml
racegate-esp-idf/: Cargo.toml  README.md  sdkconfig.defaults
racegate-esp-idf/.cargo/: config.toml
racegate-esp-idf/src/: lib.rs  main.rs  platform.rs
racegate-esp-idf/src/drivers/: button.rs  dip_switch.rs  gate.rs  http.rs  mod.rs  race_node.rs  rgb_led.rs  wifi.rs
racegate-esp-idf/tools/: dev
racegate-m5stampc3/: build.rs
racegate-m5stampc3/src/: m5stamp_c3.rs  main.rs
racegate-ui/: Cargo.toml  README.md  Trunk.toml  index.html
racegate-ui/assets/: index.html  style.css
racegate-ui/examples/: app.rs
racegate-ui/src/: app.rs  main.rs
racegate/src/: lib.rs
racegate/src/app/: gates.rs  mod.rs  race.rs
racegate/src/app/snapshots/: racegate__app__race__tests__race_default.snap  racegate__app__race__tests__race_with_start_after_finish.snap  racegate__app__race__tests__race_with_start_gate_active.snap  racegate__app__race__tests__race_with_two_finish_activations.snap
racegate/src/hal/: button.rs  dip_switch.rs  gate.rs  mod.rs  wifi.rs
racegate/src/svc/: clock.rs  mod.rs  race_node.rs  std_race_node.rs
src/: config.rs  lib.rs  main.rs  platform.rs
src/app/: mod.rs
src/application/: mod.rs
src/drivers/: gate.rs  http.rs  mod.rs  rgb_led.rs  wifi.rs
src/hal/: gate.rs  mod.rs  rgb_led.rs  wifi.rs
src/platform/: m5stamp_c3.rs  mod.rs  rust_devkit.rs
src/svc/: mod.rs
(+4 files in other folders)
