[package]
name = "racegate-esp-idf"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"

[features]
default = []
m5stampc3 = []
rustdevkit = []

[dependencies]
anyhow = "1"
embedded-svc = "0.24"
esp-idf-hal = { version = "0.40" }
esp-idf-svc = { version = "0.45", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "0.32", features = ["binstart", "native"] }
log = "0.4"
racegate = { path = "../racegate" }

[build-dependencies]
anyhow = "1"
embuild = "0.31"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
#opt-level = "z"

[package.metadata.esp-idf-sys]
esp_idf_version = "tag:v4.4.4"
esp_idf_tools_install_dir = "global"
mcu = "esp32c3"
