[package]
name = "racegate-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3.1"
dioxus-websocket-hooks = { git = "https://github.com/alepez/dioxus-websocket-hooks", rev = "7db81f9" }
fermi = "0.3"
racegate = { path = "../racegate" }
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.95"
